Package_Tools/include-C/readline/readline.pp


unit readline;
interface

{
  Automatically converted by H2Pas 1.0.0 from readline.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    readline.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
Pchar  = ^char;
Pdword  = ^dword;
PFILE  = ^FILE;
Pfunmap  = ^funmap;
Plongint  = ^longint;
Preadline_state  = ^readline_state;
Prl_command_func_t  = ^rl_command_func_t;
Prl_compdisp_func_t  = ^rl_compdisp_func_t;
Prl_compentry_func_t  = ^rl_compentry_func_t;
Prl_compignore_func_t  = ^rl_compignore_func_t;
Prl_completion_func_t  = ^rl_completion_func_t;
Prl_cpvfunc_t  = ^rl_cpvfunc_t;
Prl_dequote_func_t  = ^rl_dequote_func_t;
Prl_getc_func_t  = ^rl_getc_func_t;
Prl_hook_func_t  = ^rl_hook_func_t;
Prl_icppfunc_t  = ^rl_icppfunc_t;
Prl_linebuf_func_t  = ^rl_linebuf_func_t;
Prl_quote_func_t  = ^rl_quote_func_t;
Prl_vcpfunc_t  = ^rl_vcpfunc_t;
Prl_vintfunc_t  = ^rl_vintfunc_t;
Prl_voidfunc_t  = ^rl_voidfunc_t;
Pundo_code  = ^undo_code;
Pundo_list  = ^undo_list;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{ Readline.h -- the names of functions callable from within readline.  }
{ Copyright (C) 1987-2022 Free Software Foundation, Inc.

   This file is part of the GNU Readline Library (Readline), a library
   for reading lines of text with interactive input and history editing.      

   Readline is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   Readline is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Readline.  If not, see <http://www.gnu.org/licenses/>.
 }
{$if !defined (_READLINE_H_)}
{$define _READLINE_H_}
{ C++ extern C conditionnal removed }
{$if defined (READLINE_LIBRARY)}
{$include "rlstdc.h"}
{$include "rltypedefs.h"}
{$include "keymaps.h"}
{$include "tilde.h"}
{$else}
{$include <stdio.h>}
{$include <readline/rlstdc.h>}
{$include <readline/rltypedefs.h>}
{$include <readline/keymaps.h>}
{$include <readline/tilde.h>}
{$endif}
{ Hex-encoded Readline version number.  }
{ Readline 8.2  }

const
  RL_READLINE_VERSION = $0802;  
  RL_VERSION_MAJOR = 8;  
  RL_VERSION_MINOR = 2;  
{ Readline data structures.  }
{ Maintaining the state of undo.  We remember individual deletes and inserts
   on a chain of things to do.  }
{ The actions that undo knows how to undo.  Notice that UNDO_DELETE means
   to insert some text, and UNDO_INSERT means to delete some text.   I.e.,
   the code tells undo what to undo, not how to undo it.  }
type
  Tundo_code =  Longint;
  Const
    UNDO_DELETE = 0;
    UNDO_INSERT = 1;
    UNDO_BEGIN = 2;
    UNDO_END = 3;

{ What an element of THE_UNDO_LIST looks like.  }
{ Where the change took place.  }
{ The text to insert, if undoing a delete.  }
{ Delete, Insert, Begin, End.  }
type
  Pundo_list = ^Tundo_list;
  Tundo_list = record
      next : Pundo_list;
      start : longint;
      end : longint;
      text : Pchar;
      what : Tundo_code;
    end;
{ The current undo list for RL_LINE_BUFFER.  }
  var
    rl_undo_list : PUNDO_LIST;cvar;external;
{ The data structure for mapping textual names to code addresses.  }
(* Const before type ignored *)
type
  Pfunmap = ^Tfunmap;
  Tfunmap = record
      name : Pchar;
      _function : Prl_command_func_t;
    end;
  var
    funmap : ^PFUNMAP;cvar;external;
{ ****************************************************************  }
{								     }
{	     Functions available to bind to key sequences	     }
{								     }
{ ****************************************************************  }
{ Bindable commands for numeric arguments.  }

function rl_digit_argument(para1:longint; para2:longint):longint;cdecl;external;
function rl_universal_argument(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for moving the cursor.  }
function rl_forward_byte(para1:longint; para2:longint):longint;cdecl;external;
function rl_forward_char(para1:longint; para2:longint):longint;cdecl;external;
function rl_forward(para1:longint; para2:longint):longint;cdecl;external;
function rl_backward_byte(para1:longint; para2:longint):longint;cdecl;external;
function rl_backward_char(para1:longint; para2:longint):longint;cdecl;external;
function rl_backward(para1:longint; para2:longint):longint;cdecl;external;
function rl_beg_of_line(para1:longint; para2:longint):longint;cdecl;external;
function rl_end_of_line(para1:longint; para2:longint):longint;cdecl;external;
function rl_forward_word(para1:longint; para2:longint):longint;cdecl;external;
function rl_backward_word(para1:longint; para2:longint):longint;cdecl;external;
function rl_refresh_line(para1:longint; para2:longint):longint;cdecl;external;
function rl_clear_screen(para1:longint; para2:longint):longint;cdecl;external;
function rl_clear_display(para1:longint; para2:longint):longint;cdecl;external;
function rl_skip_csi_sequence(para1:longint; para2:longint):longint;cdecl;external;
function rl_arrow_keys(para1:longint; para2:longint):longint;cdecl;external;
function rl_previous_screen_line(para1:longint; para2:longint):longint;cdecl;external;
function rl_next_screen_line(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for inserting and deleting text.  }
function rl_insert(para1:longint; para2:longint):longint;cdecl;external;
function rl_quoted_insert(para1:longint; para2:longint):longint;cdecl;external;
function rl_tab_insert(para1:longint; para2:longint):longint;cdecl;external;
function rl_newline(para1:longint; para2:longint):longint;cdecl;external;
function rl_do_lowercase_version(para1:longint; para2:longint):longint;cdecl;external;
function rl_rubout(para1:longint; para2:longint):longint;cdecl;external;
function rl_delete(para1:longint; para2:longint):longint;cdecl;external;
function rl_rubout_or_delete(para1:longint; para2:longint):longint;cdecl;external;
function rl_delete_horizontal_space(para1:longint; para2:longint):longint;cdecl;external;
function rl_delete_or_show_completions(para1:longint; para2:longint):longint;cdecl;external;
function rl_insert_comment(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for changing case.  }
function rl_upcase_word(para1:longint; para2:longint):longint;cdecl;external;
function rl_downcase_word(para1:longint; para2:longint):longint;cdecl;external;
function rl_capitalize_word(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for transposing characters and words.  }
function rl_transpose_words(para1:longint; para2:longint):longint;cdecl;external;
function rl_transpose_chars(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for searching within a line.  }
function rl_char_search(para1:longint; para2:longint):longint;cdecl;external;
function rl_backward_char_search(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for readline's interface to the command history.  }
function rl_beginning_of_history(para1:longint; para2:longint):longint;cdecl;external;
function rl_end_of_history(para1:longint; para2:longint):longint;cdecl;external;
function rl_get_next_history(para1:longint; para2:longint):longint;cdecl;external;
function rl_get_previous_history(para1:longint; para2:longint):longint;cdecl;external;
function rl_operate_and_get_next(para1:longint; para2:longint):longint;cdecl;external;
function rl_fetch_history(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for managing the mark and region.  }
function rl_set_mark(para1:longint; para2:longint):longint;cdecl;external;
function rl_exchange_point_and_mark(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands to set the editing mode (emacs or vi).  }
function rl_vi_editing_mode(para1:longint; para2:longint):longint;cdecl;external;
function rl_emacs_editing_mode(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands to change the insert mode (insert or overwrite)  }
function rl_overwrite_mode(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for managing key bindings.  }
function rl_re_read_init_file(para1:longint; para2:longint):longint;cdecl;external;
function rl_dump_functions(para1:longint; para2:longint):longint;cdecl;external;
function rl_dump_macros(para1:longint; para2:longint):longint;cdecl;external;
function rl_dump_variables(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for word completion.  }
function rl_complete(para1:longint; para2:longint):longint;cdecl;external;
function rl_possible_completions(para1:longint; para2:longint):longint;cdecl;external;
function rl_insert_completions(para1:longint; para2:longint):longint;cdecl;external;
function rl_old_menu_complete(para1:longint; para2:longint):longint;cdecl;external;
function rl_menu_complete(para1:longint; para2:longint):longint;cdecl;external;
function rl_backward_menu_complete(para1:longint; para2:longint):longint;cdecl;external;
{ Bindable commands for killing and yanking text, and managing the kill ring.  }
function rl_kill_word(para1:longint; para2:longint):longint;cdecl;external;
function rl_backward_kill_word(para1:longint; para2:longint):longint;cdecl;external;
function rl_kill_line(para1:longint; para2:longint):longint;cdecl;external;
function rl_backward_kill_line(para1:longint; para2:longint):longint;cdecl;external;
function rl_kill_full_line(para1:longint; para2:longint):longint;cdecl;external;
function rl_unix_word_rubout(para1:longint; para2:longint):longint;cdecl;external;
function rl_unix_filename_rubout(para1:longint; para2:longint):longint;cdecl;external;
function rl_unix_line_discard(para1:longint; para2:longint):longint;cdecl;external;
function rl_copy_region_to_kill(para1:longint; para2:longint):longint;cdecl;external;
function rl_kill_region(para1:longint; para2:longint):longint;cdecl;external;
function rl_copy_forward_word(para1:longint; para2:longint):longint;cdecl;external;
function rl_copy_backward_word(para1:longint; para2:longint):longint;cdecl;external;
function rl_yank(para1:longint; para2:longint):longint;cdecl;external;
function rl_yank_pop(para1:longint; para2:longint):longint;cdecl;external;
function rl_yank_nth_arg(para1:longint; para2:longint):longint;cdecl;external;
function rl_yank_last_arg(para1:longint; para2:longint):longint;cdecl;external;
function rl_bracketed_paste_begin(para1:longint; para2:longint):longint;cdecl;external;
{ Not available unless _WIN32 is defined.  }
{$if defined (_WIN32)}

function rl_paste_from_clipboard(para1:longint; para2:longint):longint;cdecl;external;
{$endif}
{ Bindable commands for incremental searching.  }
